# spliceqq

./: README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/lib/components/: settings-dialog.svelte
src/lib/shared/: config.svelte.ts
